--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,63 @@
 .bg-fifth {
   background-color: var(--fifth-color);
 }
+.special-heading {
+  color: var(--main-color);
+  /* margin-top: 50px; */
+  position: relative;
+  text-transform: capitalize;
+}
+.special-heading::after {
+  position: absolute;
+  /* margin: auto; */
+  content: "";
+  height: 5px;
+  bottom: -10px;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%);
+  background-color: var(--main-color);
+}
+#main {
+  background-image: url("/img/door.jpg");
+  height: calc(100vh - 55px);
+  position: relative;
+  background-size: cover;
+  /* background-size: 100vw; */
+}
+#main .text {
+  background-color: rgb(0 0 0/ 60%);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+body::before {
+  content: "";
+  display: block;
+  height: 55px;
+}
+
+.map {
+  background: url(../img/map.png);
+  background-size: 38rem;
+  background-position: center;
+  border: 5px solid black;
+}
+.arabic {
+  direction: rtl;
+}
+.contactbtn {
+  border: none;
+  padding: 15px 0;
+  width: 100%;
+  margin: 0;
+  background: var(--main-color);
+  color: #fff;
+  border-radius: 0;
+  cursor: pointer;
+}
+.input:focus {
+  outline: none !important;
+  border: 1px solid var(--main-color);
+  box-shadow: 0 0 10px var(--main-color);
+}
