--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css");
+
 :root {
   --main-color: #f8be81;
   --second-color: #96a178;
@@ -61,6 +63,23 @@ body::before {
   background-size: 38rem;
   background-position: center;
   border: 5px solid black;
+  position: relative;
+}
+.map::before {
+  content: "Click here for location";
+  background-color: lightgreen;
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  padding: 5px;
+  font-weight: 500;
+  border-radius: 25px;
+  text-decoration: none;
+  color: black;
+}
+.map:hover::before {
+  background-color: green;
+  color: white;
 }
 @media screen and (max-width: 640px) {
   .map {
@@ -76,7 +95,7 @@ body::before {
   border: none;
   padding: 15px 0;
   width: 100%;
-  margin: 0;
+  margin: 5px;
   background: var(--main-color);
   color: #fff;
   border-radius: 0;
@@ -110,6 +129,7 @@ body::before {
 .portfolio .imgs-container {
   display: flex;
   flex-wrap: wrap;
+  gap: 5px;
   margin-top: 60px;
 }
 .portfolio .imgs-container .box {
@@ -129,7 +149,7 @@ body::before {
 }
 @media (min-width: 1199px) {
   .portfolio .imgs-container .box {
-    flex-basis: 25%;
+    flex-basis: 24.5%;
   }
 }
 .portfolio .imgs-container .box img {
@@ -151,6 +171,9 @@ body::before {
 }
 .portfolio .imgs-container .box .caption p {
   color: grey;
+}
+.form-control {
+  margin: 5px;
 }
 /* .portfolio .more {
   background-color: var(--main-color);
