--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
 
 :root {
   --main-color: #f8be81;
-  --second-color: #96a178;
+  --second-color: #a6ff00;
   --third-color: #c2b7ad;
-  --fourth-color: #110d0d;
+  --fourth-color: #101010;
   --fifth-color: #ffffff;
 }
 .bg-main {
@@ -21,6 +21,37 @@
 }
 .bg-fifth {
   background-color: var(--fifth-color);
+}
+.text-purple {
+  color: slateblue;
+}
+.navbar-dark .navbar-brand {
+  transition: ease 0.5s;
+}
+.navbar-dark .navbar-brand:hover {
+  color: black !important;
+  background-color: #f8b56e;
+  border-radius: 15px;
+  padding: 5px;
+}
+.dropdown-menu-dark .dropdown-item.active,
+.dropdown-menu-dark .dropdown-item:active {
+  color: #fff;
+  background-color: var(--main-color);
+}
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: white;
+}
+.navbar-dark .navbar-nav .nav-link:hover::before {
+  position: absolute;
+  /* margin: auto; */
+  content: "";
+  height: 5px;
+  bottom: -5px;
+  left: 40%;
+  width: 60%;
+  transform: translateX(-50%);
+  background-color: white;
 }
 .special-heading {
   color: var(--main-color);
@@ -57,27 +88,49 @@ body::before {
   display: block;
   height: 55px;
 }
-
+.hoverbg:hover {
+  background-color: var(--fourth-color);
+  color: white;
+  transition: all 0.5s;
+}
+.hoverbg2:hover {
+  background-color: grey;
+  color: white;
+  transition: all 0.5s;
+}
+.hoverbg3:hover {
+  background-color: white;
+  transition: all 0.5s;
+}
+.hoverbg3:hover > h4,
+.hoverbg3:hover > div > i {
+  color: black !important;
+}
+.hoverbg2:hover .bi-facebook::before,
+.hoverbg2:hover .bi-whatsapp::before,
+.hoverbg2:hover .bi-messenger::before {
+  color: white;
+}
 .map {
   background: url(../img/map.png);
   background-size: 38rem;
   background-position: center;
-  border: 5px solid black;
+  border: 7px solid var(--main-color);
   position: relative;
 }
-.map::before {
-  content: "Click here for location";
+.map > span {
   background-color: lightgreen;
   position: absolute;
   bottom: 5px;
   right: 5px;
-  padding: 5px;
+  padding: 5px 7px;
   font-weight: 500;
   border-radius: 25px;
   text-decoration: none;
   color: black;
+  transition: all 0.5s;
 }
-.map:hover::before {
+.map > span:hover {
   background-color: green;
   color: white;
 }
@@ -113,25 +166,50 @@ body::before {
   transform: scale(1.1);
 }
 
+.imghover {
+  transition: 0.5s;
+}
+.imghover:hover {
+  transform: rotate(3deg) scale(1.1);
+}
+.imgcont {
+  position: relative;
+  overflow: hidden;
+}
+.cardbuttonhover:hover {
+  background-color: var(--main-color);
+  border: none;
+  color: black !important;
+  font-weight: 500 !important;
+}
 /* Start Portfolio */
-.portfolio .shuffle {
+/* .portfolio .shuffle {
   display: flex;
   justify-content: center;
   list-style: none;
-}
-.portfolio .shuffle li {
+} */
+/* .portfolio .shuffle li {
   padding: 10px;
+} */
+.filterlist {
+  padding: 5px;
+  border: 1px solid #f8b56e;
+  cursor: pointer;
 }
-.portfolio .shuffle li.active {
+.filterlist:hover {
+  background-color: var(--fourth-color);
+  color: white;
+}
+li.active {
   background-color: var(--main-color);
   color: white;
 }
-.portfolio .imgs-container {
+/* .portfolio .imgs-container {
   display: flex;
   flex-wrap: wrap;
   gap: 5px;
   margin-top: 60px;
-}
+} */
 .portfolio .imgs-container .box {
   overflow: hidden;
   position: relative;
@@ -160,13 +238,14 @@ body::before {
   position: absolute;
   left: 0;
   padding: 20px;
-  background-color: white;
+  background-color: var(--fourth-color);
   width: 100%;
   transition: 0.3s;
   bottom: -100%;
 }
 .portfolio .imgs-container .box .caption h4 {
   font-weight: normal;
+  color: white;
   margin-bottom: 10px;
 }
 .portfolio .imgs-container .box .caption p {
@@ -175,14 +254,24 @@ body::before {
 .form-control {
   margin: 5px;
 }
-/* .portfolio .more {
-  background-color: var(--main-color);
-  color: white;
-  padding: 15px 20px;
-  display: block;
-  width: fit-content;
-  margin: 30px auto;
-  text-decoration: none;
-  text-transform: uppercase;
-} */
+
+.bi-facebook:hover::before,
+.bi-whatsapp:hover::before,
+.bi-messenger:hover::before {
+  color: aquamarine !important;
+}
+
 /* End Portfolio */
+footer > ul > li > a:hover {
+  color: white !important;
+  font-weight: 500;
+}
+footer > p > a:hover {
+  /* font-weight: 500; */
+  color: rgb(0, 153, 255) !important;
+  transition: ease 0.5s;
+}
+footer > a > img:hover {
+  transform: scale(1.1);
+  transition: ease 0.5s;
+}
