--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.1/font/bootstrap-icons.css");
+
 :root {
   --main-color: #f8be81;
-  --second-color: #96a178;
+  --second-color: #a6ff00;
   --third-color: #c2b7ad;
-  --fourth-color: #110d0d;
+  --fourth-color: #101010;
   --fifth-color: #ffffff;
 }
 .bg-main {
@@ -20,39 +22,257 @@
 .bg-fifth {
   background-color: var(--fifth-color);
 }
-.special-heading{
+.text-purple {
+  color: slateblue;
+}
+.navbar-dark .navbar-brand {
+  transition: ease 0.5s;
+}
+.navbar-dark .navbar-brand:hover {
+  color: black !important;
+  background-color: #f8b56e;
+  border-radius: 15px;
+  padding: 5px;
+}
+.dropdown-menu-dark .dropdown-item.active,
+.dropdown-menu-dark .dropdown-item:active {
+  color: #fff;
+  background-color: var(--main-color);
+}
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: white;
+}
+.navbar-dark .navbar-nav .nav-link:hover::before {
+  position: absolute;
+  /* margin: auto; */
+  content: "";
+  height: 5px;
+  bottom: -5px;
+  left: 40%;
+  width: 60%;
+  transform: translateX(-50%);
+  background-color: white;
+}
+.special-heading {
   color: var(--main-color);
   /* margin-top: 50px; */
   position: relative;
   text-transform: capitalize;
-
 }
-.special-heading::after{
-position: absolute;
-/* margin: auto; */
-content: '';
-height: 5px;
-bottom: -10px;
-left: 50%;
-width: 50%;
-transform: translateX(-50%);
-background-color: var(--main-color);
+.special-heading::after {
+  position: absolute;
+  /* margin: auto; */
+  content: "";
+  height: 5px;
+  bottom: -10px;
+  left: 50%;
+  width: 50%;
+  transform: translateX(-50%);
+  background-color: var(--main-color);
 }
-#main{
-  background-image: url("/img/door.jpg") ;
+#main {
+  background-image: url("../img/door.jpg");
   height: calc(100vh - 55px);
   position: relative;
   background-size: cover;
   /* background-size: 100vw; */
 }
-#main .text{
+#main .text {
   background-color: rgb(0 0 0/ 60%);
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }
-body::before{
-content: '';
-display:block;
-height: 55px;
+body::before {
+  content: "";
+  display: block;
+  height: 55px;
+}
+.hoverbg:hover {
+  background-color: var(--fourth-color);
+  color: white;
+  transition: all 0.5s;
+}
+.hoverbg2:hover {
+  background-color: grey;
+  color: white;
+  transition: all 0.5s;
+}
+.hoverbg3:hover {
+  background-color: white;
+  transition: all 0.5s;
+}
+.hoverbg3:hover > h4,
+.hoverbg3:hover > div > i {
+  color: black !important;
+}
+.hoverbg2:hover .bi-facebook::before,
+.hoverbg2:hover .bi-whatsapp::before,
+.hoverbg2:hover .bi-messenger::before {
+  color: white;
+}
+.map {
+  background: url(../img/map.png);
+  background-size: 38rem;
+  background-position: center;
+  border: 7px solid var(--main-color);
+  position: relative;
+}
+.map > span {
+  background-color: lightgreen;
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  padding: 5px 7px;
+  font-weight: 500;
+  border-radius: 25px;
+  text-decoration: none;
+  color: black;
+  transition: all 0.5s;
+}
+.map > span:hover {
+  background-color: green;
+  color: white;
+}
+@media screen and (max-width: 640px) {
+  .map {
+    height: 15rem;
+    margin-bottom: 2rem;
+  }
+}
+
+.arabic {
+  direction: rtl;
+}
+.contactbtn {
+  border: none;
+  padding: 15px 0;
+  width: 100%;
+  margin: 5px;
+  background: var(--main-color);
+  color: #fff;
+  border-radius: 0;
+  cursor: pointer;
+}
+.input:focus {
+  outline: none !important;
+  border: 1px solid var(--main-color);
+  box-shadow: 0 0 10px var(--main-color);
+}
+.hover-zoom {
+  transition: transform 0.2s;
+}
+.hover-zoom:hover {
+  transform: scale(1.1);
+}
+
+.imghover {
+  transition: 0.5s;
+}
+.imghover:hover {
+  transform: rotate(3deg) scale(1.1);
+}
+.imgcont {
+  position: relative;
+  overflow: hidden;
+}
+.cardbuttonhover:hover {
+  background-color: var(--main-color);
+  border: none;
+  color: black !important;
+  font-weight: 500 !important;
+}
+/* Start Portfolio */
+/* .portfolio .shuffle {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+} */
+/* .portfolio .shuffle li {
+  padding: 10px;
+} */
+.filterlist {
+  padding: 5px;
+  border: 1px solid #f8b56e;
+  cursor: pointer;
+}
+.filterlist:hover {
+  background-color: var(--fourth-color);
+  color: white;
+}
+li.active {
+  background-color: var(--main-color);
+  color: white;
+}
+/* .portfolio .imgs-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  margin-top: 60px;
+} */
+.portfolio .imgs-container .box {
+  overflow: hidden;
+  position: relative;
+}
+.portfolio .imgs-container .box:hover .caption {
+  bottom: 0;
+}
+.portfolio .imgs-container .box:hover img {
+  transform: rotate(3deg) scale(1.1);
+}
+@media (min-width: 768px) {
+  .portfolio .imgs-container .box {
+    flex-basis: 50%;
+  }
+}
+@media (min-width: 1199px) {
+  .portfolio .imgs-container .box {
+    flex-basis: 24.5%;
+  }
+}
+.portfolio .imgs-container .box img {
+  max-width: 100%;
+  transition: 0.5s;
+}
+.portfolio .imgs-container .box .caption {
+  position: absolute;
+  left: 0;
+  padding: 5px;
+  background-color: var(--fourth-color);
+  width: 100%;
+  transition: 0.3s;
+  bottom: -100%;
+}
+.portfolio .imgs-container .box .caption h4 {
+  font-weight: normal;
+  color: white;
+  /* margin-bottom: 10px; */
+}
+.portfolio .imgs-container .box .caption p {
+  color: grey;
+  margin: 10px 0;
+}
+.form-control {
+  margin: 5px;
+}
+
+.bi-facebook:hover::before,
+.bi-whatsapp:hover::before,
+.bi-messenger:hover::before {
+  color: aquamarine !important;
+}
+
+/* End Portfolio */
+footer > ul > li > a:hover {
+  color: white !important;
+  font-weight: 500;
+}
+footer > p > a:hover {
+  /* font-weight: 500; */
+  color: rgb(0, 153, 255) !important;
+  transition: ease 0.5s;
+}
+footer > a > img:hover {
+  transform: scale(1.1);
+  transition: ease 0.5s;
 }
