--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,11 @@ body::before {
   border: 7px solid var(--main-color);
   position: relative;
 }
+@media (max-width:767px){
+  .map{
+    border: 3px solid var(--main-color);
+  }
+}
 .map > span {
   background-color: lightgreen;
   position: absolute;
@@ -134,7 +139,7 @@ body::before {
   background-color: green;
   color: white;
 }
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 800px) {
   .map {
     height: 15rem;
     margin-bottom: 2rem;
@@ -148,7 +153,7 @@ body::before {
   border: none;
   padding: 15px 0;
   width: 100%;
-  margin: 5px;
+  margin: 5px 0;
   background: var(--main-color);
   color: #fff;
   border-radius: 0;
@@ -253,7 +258,7 @@ li.active {
   margin: 10px 0;
 }
 .form-control {
-  margin: 5px;
+  margin: 5px 0;
 }
 
 .bi-facebook:hover::before,
