--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,15 @@
 .text-purple {
   color: slateblue;
 }
+.p-2rem {
+  padding: 2rem !important;
+}
+img {
+  border-radius: 15px;
+}
+a {
+  text-decoration: none;
+}
 .navbar-dark .navbar-brand {
   transition: ease 0.5s;
 }
@@ -52,6 +61,11 @@
   width: 60%;
   transform: translateX(-50%);
   background-color: white;
+}
+@media screen and (max-width: 640px) {
+  .navbar-dark .navbar-nav .nav-link:hover::before {
+    display: none;
+  }
 }
 .special-heading {
   color: var(--main-color);
@@ -144,7 +158,7 @@ body::before {
 @media screen and (max-width: 640px) {
   .map {
     margin-bottom: 2rem;
-    width: 25rem;
+    width: 95%;
     height: 15rem;
   }
 }
@@ -273,6 +287,10 @@ li.active {
 /* droos tabs */
 .tabcontent {
   display: none;
+  background-color: var(--fourth-color);
+  color: white !important;
+  border-radius: 15px;
+  padding: 10px;
 }
 /* .active .tabcontent {
   display: block;
@@ -294,6 +312,7 @@ li.active {
 .tablinks:focus {
   background-color: var(--main-color);
 }
+
 .tabcontent {
   animation: fadeEffect 1s; /* Fading effect takes 1 second */
 }
@@ -350,10 +369,9 @@ footer > a > img:hover {
 } */
 .fullpage {
   height: 100vh;
-  width: 100vw;
 }
 @media screen and (max-width: 640px) {
   .fullpage {
-    height: 80vh;
+    height: 100vh;
   }
 }
