--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,9 @@ a {
   color: #fff;
   background-color: var(--main-color);
 }
+.navbar-dark .navbar-nav .nav-link {
+  position: relative;
+}
 .navbar-dark .navbar-nav .nav-link:hover {
   color: white;
 }
@@ -62,8 +65,21 @@ a {
   transform: translateX(-50%);
   background-color: white;
 }
+.drossnav:hover::before {
+  position: absolute;
+  content: "";
+  height: 5px;
+  bottom: -5px;
+  left: 40%;
+  width: 60%;
+  transform: translateX(-30%) !important;
+  background-color: white;
+}
 @media screen and (max-width: 640px) {
   .navbar-dark .navbar-nav .nav-link:hover::before {
+    display: none;
+  }
+  .drossnav:hover::before {
     display: none;
   }
 }
@@ -359,9 +375,9 @@ footer > a > img:hover {
     font-size: 12px;
     margin-bottom: 1rem !important;
   }
-  .mfootnav {
+  /* .mfootnav {
     margin-bottom: 1.3rem;
-  }
+  } */
 }
 /* footer {
   position: absolute;
@@ -370,8 +386,8 @@ footer > a > img:hover {
 .fullpage {
   height: 100vh;
 }
-@media screen and (max-width: 640px) {
+/* @media screen and (max-width: 640px) {
   .fullpage {
     height: 100vh;
   }
-}
+} */
