--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
   --fourth-color: #101010;
   --fifth-color: #ffffff;
 }
+.circle-bg{
+  background-color: var(--third-color);
+  border-radius: 50%;
+}
 .bg-main {
   background-color: var(--main-color);
 }
@@ -319,54 +323,44 @@ li.active {
   background-color: var(--main-color);
   color: white;
 }
-/* .portfolio .imgs-container {
+.portfolio {
   display: flex;
   flex-wrap: wrap;
   gap: 5px;
-  margin-top: 60px;
-} */
-.portfolio .imgs-container .box {
+  margin-top: 20px;
+}
+.portfolio .box {
   overflow: hidden;
   position: relative;
+  width: -webkit-fill-available;
 }
-.portfolio .imgs-container .box:hover .caption {
-  bottom: 0;
+.portfolio .box li {
+  list-style: square;
+  transition: ease all 1s
 }
-.portfolio .imgs-container .box:hover img {
-  transform: rotate(3deg) scale(1.1);
+.portfolio .box:hover {
+  background-color: var(--fourth-color);
+  color: white;
 }
+
 @media (min-width: 768px) {
-  .portfolio .imgs-container .box {
+  .portfolio  .box {
     flex-basis: 50%;
   }
 }
 @media (min-width: 1199px) {
-  .portfolio .imgs-container .box {
-    flex-basis: 24.5%;
+  .portfolio .box {
+    flex-basis: 31.3%;
   }
 }
-.portfolio .imgs-container .box img {
-  max-width: 100%;
-  transition: 0.5s;
+
+
+.box{
+ background-color: var(--main-color);
+ border-radius: 10px;
+ padding: 10px;
 }
-.portfolio .imgs-container .box .caption {
-  position: absolute;
-  left: 0;
-  padding: 5px;
-  background-color: var(--fourth-color);
-  width: 100%;
-  transition: 0.3s;
-  bottom: -100%;
-}
-.portfolio .imgs-container .box .caption h4 {
-  font-weight: normal;
-  color: white;
-  /* margin-bottom: 10px; */
-}
-.portfolio .imgs-container .box .caption p {
-  color: grey;
-  margin: 10px 0;
-}
+
 .form-control {
   margin: 5px 0;
 }
@@ -469,3 +463,44 @@ footer > a > img:hover {
     height: 100vh;
   }
 } */
+@keyframes rotate {
+  100% {
+    transform: rotate(1turn);
+  }
+}
+.rainbow {
+  position: relative;
+  z-index: 0;
+  /* width: 400px; */
+  /* height: 300px;  */
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 2rem;
+}
+.rainbow::before {
+  content: '';
+  position: absolute;
+  z-index: -2;
+  left: -50%;
+  top: -50%;
+  width: 200%;
+  height: 200%;
+  background-color: var(--main-color);
+  background-repeat: no-repeat;
+  background-size: 50% 50%, 50% 50%;
+  background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+  background-image: linear-gradient(var(--main-color),var(--main-color)), linear-gradient(var(--main-color), var(--main-color)), linear-gradient(var(--fourth-color), var(--fourth-color)), linear-gradient(var(--fourth-color), var(--fourth-color));
+  animation: rotate 4s linear infinite;
+}
+.rainbow::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  left: 6px;
+  top: 6px;
+  width: calc(100% - 12px);
+  height: calc(100% - 12px);
+  background: white;
+  border-radius: 5px;
+  animation: opacityChange 3s infinite alternate;
+}
